<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coordinator"
	android:layout_width="match_parent"
	android:background="@android:color/black"
	android:animateLayoutChanges="true"
	android:layout_height="match_parent">

	<androidx.camera.view.PreviewView
		android:id="@+id/previewView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/recognizedContainer"
		android:layout_width="match_parent"
		android:visibility="gone"
		android:background="@color/text_recognition_result_background"
		android:layout_gravity="bottom"
		tools:visibility="visible"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/recognizedTitle"
			android:textAppearance="@style/TextAppearance.LightBase.Camera.TextRecognition.Result.Title"
			android:layout_width="match_parent"
			android:layout_marginTop="16dp"
			android:layout_marginHorizontal="16dp"
			android:layout_height="wrap_content"
			android:text="@string/text_recognition_title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/recognizedValue"
			android:textAppearance="@style/TextAppearance.LightBase.Camera.TextRecognition.Result.Value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="8dp"
			tools:text="Result text"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/recognizedTitle" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/confirmButton"
			android:layout_width="0dp"
			android:layout_marginHorizontal="16dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			style="@style/Widget.LightBase.Camera.TextRecognition.Button.Confirm"
			android:text="@string/text_recognition_confirm"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/recognizedValue" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/tryAgainButton"
			android:layout_width="0dp"
			android:layout_marginHorizontal="16dp"
			style="@style/Widget.LightBase.Camera.TextRecognition.Button.TryAgain"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="16dp"
			android:layout_height="wrap_content"
			android:text="@string/text_recognition_try_again"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/confirmButton" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/recognizeButton"
		android:layout_width="match_parent"
		android:layout_margin="16dp"
		style="@style/Widget.LightBase.Camera.TextRecognition.Button.Recognize"
		tools:visibility="gone"
		android:layout_gravity="bottom"
		android:layout_height="wrap_content"
		android:text="@string/text_recognition_recognize" />

	<ImageView
		android:id="@+id/close"
		style="@style/Widget.LightBase.Camera.ImageButton.PhotoPreview.Close"
		android:contentDescription="@string/camera_close_camera" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>